# Metal_Cpp_VsCode_Template

./: .gitignore  CMakeLists.txt  README.md
shaders/: matrix_multiply.metal
src/: main.cpp  matrix.cpp  matrix.hpp  metal_wrapper.hpp  metal_wrapper.mm
